# encryptos

./: LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
encrypto/: __init__.py
src/encryptos/: __init__.py  en.py  version.py
