[metadata]
name = encrypto
version = 1.0.1
author = Brian Musakwa
author_email = digreatbrian@gmail.com
description = A simple module to encrypt and decrypt data using a secret keys/passcodes.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/digreatbrian/encrypto
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE

[options]
package_dir == ./encrypto
packages = find:
python_requires = >=3.6
[options.packages.find]
where = ./encrypto
